mpchart jar提交，titlebar加入

--- a/android-mobile-jsw/jsw_app/src/main/res/values/colors.xml
+++ b/android-mobile-jsw/jsw_app/src/main/res/values/colors.xml
@@ -294,4 +294,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <!--通用标题栏背景色-->
+    <color name="bg_title">#2ec075</color>
+    <!--通用layout隔断浅灰背景色-->
+    <color name="bg_layout_line">#f2f2f2</color>
 </resources>
