--- a/android-mobile-jsw/jsw_app/src/main/res/layout/set_account_fragment_activity.xml
+++ b/android-mobile-jsw/jsw_app/src/main/res/layout/set_account_fragment_activity.xml
@@ -6,4 +6,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="账户设置"/>
+    <Button
+        android:id="@+id/btn_update"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="更新"/>
 </LinearLayout>
