mapchart,JsonUtils.java

--- a/android-mobile-jsw/jsw_app/src/main/res/layout/msg_push_fragment_activity.xml
+++ b/android-mobile-jsw/jsw_app/src/main/res/layout/msg_push_fragment_activity.xml
@@ -3,7 +3,13 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <TextView
+        android:id="@+id/tv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:text="消息推送"/>
+    <Button
+        android:id="@+id/btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="请求"/>
 </LinearLayout>
