--- a/android-mobile-jsw/jsw_app/src/main/res/layout/home_frament_activity.xml
+++ b/android-mobile-jsw/jsw_app/src/main/res/layout/home_frament_activity.xml
@@ -3,13 +3,12 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+    <com.handmark.pulltorefresh.library.PullToRefreshListView
+        android:id="@+id/mrjp_lv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="首页"/>
-    <Button
-        android:id="@+id/btn_upload"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="上传"/>
+        android:cacheColorHint="#00000000"
+        android:divider="#00000000"
+        android:groupIndicator="@null"
+        android:scrollbars="none" />
 </LinearLayout>
