--- a/android-mobile-jsw/jsw_app/src/main/res/layout/msg_push_fragment_activity.xml
+++ b/android-mobile-jsw/jsw_app/src/main/res/layout/msg_push_fragment_activity.xml
@@ -12,4 +12,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="请求"/>
+    <Button
+        android:id="@+id/btn2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="请求"/>
 </LinearLayout>
