--- a/android-mobile-jsw/jsw_app/src/main/res/values/dimens.xml
+++ b/android-mobile-jsw/jsw_app/src/main/res/values/dimens.xml
@@ -2,4 +2,11 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="et_text_size">15sp</dimen>
+    <dimen name="btn_text_size">18sp</dimen>
+    <dimen name="level_title_text_size">20sp</dimen>
+    <dimen name="level_first_text_size">18sp</dimen>
+    <dimen name="level_second_text_size">16sp</dimen>
+    <dimen name="level_small_text_size">14sp</dimen>
 </resources>
